[package]
name = "louismod-kdriver"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.53.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Performance",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
]}
bitflags = "1.3.2"
thiserror = "1.0"
log = "0.4"
